home/iptables/rules.v4
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j REJECT

# SSH
-A INPUT -p tcp -m tcp --dport 22    -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
# CADDY
#-A INPUT -p tcp -m tcp --dport 80    -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
#-A INPUT -p tcp -m tcp --dport 443   -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT

# ICMP
-A INPUT -p icmp -j ACCEPT

# DOCKER
-N DOCKER-USER
# CADDY
-A DOCKER-USER -p tcp -m conntrack                       --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-USER -p tcp -m conntrack                       --ctstate INVALID             -j REJECT
-A DOCKER-USER -p tcp -m conntrack --ctorigdstport 80    --ctstate NEW,ESTABLISHED     -j ACCEPT
-A DOCKER-USER -p tcp -m conntrack --ctorigdstport 443   --ctstate NEW,ESTABLISHED     -j ACCEPT


# REJECT ANY OTHER DOCKER PORT
-A DOCKER-USER -i eth0 -m conntrack --ctdir ORIGINAL -j REJECT 

# REJECT ANYTHING ELSE
-A INPUT -j REJECT
-A FORWARD -j REJECT

COMMIT
